search bar added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,15 @@
                     <i class="fa-solid fa-location-dot"></i>
                     <p class="add-sec">Bangladesh</p>
                 </div>
-
+             </div>
+             <div class="nav-search">
+                <select class="nav-select">
+                    <option >All</option>
+                </select>
+                <input placeholder="Search Amazon" class="search">
+                <div class="search-icon">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
              </div>
         </div>
      </header>
