--- a/index.html
+++ b/index.html
@@ -26,10 +26,26 @@
                 <select class="nav-select">
                     <option >All</option>
                 </select>
-                <input placeholder="Search Amazon" class="search">
+                <input placeholder="  Search Amazon" class="search">
                 <div class="search-icon">
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
+             </div>
+             <div class="nav-signIn border" style="padding: 5px;">
+                <p><span>Hello, sign in</span></p>
+                <div class="nav-sec">
+                    Account & Lists
+                </div>
+             </div>
+             <div class="nav-returns border" style="padding: 5px;">
+                <p><span>Returns</span></p>
+                <div class="nav-sec">
+                     & Orders
+                </div>
+             </div>
+             <div class="nav-cart border" style="padding: 5px;">
+                <i class="fa-solid fa-cart-shopping"></i>
+                Cart
              </div>
         </div>
      </header>
