--- a/index.html
+++ b/index.html
@@ -48,6 +48,22 @@
                 Cart
              </div>
         </div>
+        <div class="panal">
+            <div class="panal-all">
+                <i class="fa-solid fa-bars"></i>
+                 All
+            </div>
+            <div class="panal-ops">
+                <p>Today's Deals</p>
+                <p>Customer Service</p>
+                <p>Registry</p>
+                <p>Gift Cards</p>
+                <p>Sell</p>
+            </div>
+            <div class="panal-deals">
+                Shop deals in Electronics
+            </div>
+        </div>
      </header>
     
 </body>
