added main section
added amazon.bd

--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
             </div>
         </div>
      </header>
+     <div class="main-section">
+       <div class="msg">
+        <p>You are on amazon.com You can also shop on Amazon Bangladesh for millions of products with fast local delivery. <a >Click here to go to Amazon.bd</a></p>
+       </div>
+     </div>
     
 </body>
 </html>
