--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
              <div class="box">
                  <div class="box-content">
                      <h4> Beauty picks</h4>
-                         <div class="box-image" style="background-image: url('box1_image.jpg');">
+                         <div class="box-image" style="background-image: url('image/box1_image.jpg');">
                          </div>
                      <p>See more</p>
                  </div>
@@ -83,7 +83,7 @@
              <div class="box">
                  <div class="box-content">
                      <h4>Health and Personal care</h4>
-                         <div class="box-image" style="background-image: url('box2_image.jpg');">
+                         <div class="box-image" style="background-image: url('image/box2_image.jpg');">
                          </div>
                      <p>See more</p>
                  </div>
@@ -91,7 +91,7 @@
              <div class="box">
                  <div class="box-content">
                      <h4> Furniture</h4>
-                         <div class="box-image" style="background-image: url('box3_image.jpg');">
+                         <div class="box-image" style="background-image: url('image/box3_image.jpg');">
                          </div>
                      <p>See more</p>
                  </div>
@@ -99,7 +99,7 @@
              <div class="box">
                  <div class="box-content">
                      <h4> Electronics</h4>
-                         <div class="box-image" style="background-image: url('box4_image.jpg');">
+                         <div class="box-image" style="background-image: url('image/box4_image.jpg');">
                          </div>
                      <p>See more</p>
                  </div>
@@ -107,7 +107,7 @@
              <div class="box">
                  <div class="box-content">
                      <h4> Clothes</h4>
-                         <div class="box-image" style="background-image: url('box5_image.jpg');">
+                         <div class="box-image" style="background-image: url('image/box5_image.jpg');">
                          </div>
                      <p>See more</p>
                  </div>
@@ -115,7 +115,7 @@
              <div class="box">
                  <div class="box-content">
                      <h4> Pet care</h4>
-                         <div class="box-image" style="background-image: url('box6_image.jpg');">
+                         <div class="box-image" style="background-image: url('image/box6_image.jpg');">
                          </div>
                      <p>See more</p>
                  </div>
@@ -123,7 +123,7 @@
              <div class="box">
                  <div class="box-content">
                      <h4> New Arrival in Toys</h4>
-                         <div class="box-image" style="background-image: url('box7_image.jpg');">
+                         <div class="box-image" style="background-image: url('image/box7_image.jpg');">
                          </div>
                      <p>See more</p>
                  </div>
@@ -131,7 +131,7 @@
              <div class="box">
                  <div class="box-content">
                      <h4> Discover Fashion</h4>
-                         <div class="box-image" style="background-image: url('box8_image.jpg');">
+                         <div class="box-image" style="background-image: url('image/box8_image.jpg');">
                          </div>
                      <p>See more</p>
                  </div>
